[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["malco carvalho <malcoc@motorola.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rsa = "^4.9"


[tool.poetry.group.dev.dependencies]
prospector = "^1.10.1"
pip-audit = "^2.5.5"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
